Updating Index file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>BC Computer Science Club</title>
 	<body>
-		Welcome to this world.
+		<h1>This is a Heading</h1>
+		<p>This is a paragraph.</p>
 	<body/>
 </html>
